// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props testing turn off motion 1`] = `
<span
  className=""
  style={
    {
      "fontSize": "1rem",
    }
  }
>
  👋
</span>
`;

exports[`props testing turn on motion 1`] = `
<span
  className="motion"
  style={
    {
      "animationIterationCount": 2,
      "fontSize": "2.5rem",
    }
  }
>
  👋🏼
</span>
`;
